cmake_minimum_required(VERSION 2.8)

project (Euler C)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${Euler_SOURCE_DIR}/bin")

if(UNIX)
  link_libraries(m)
endif(UNIX)
  
macro (peuler num result)
  add_executable(euler${num} euler${num}.c)
  foreach(lib ${ARGN})
    target_link_libraries(euler${num} ${lib})
  endforeach()
  if(EXISTS "${Euler_SOURCE_DIR}/data/euler${num}.txt")
    add_test (euler${num}test "${Euler_SOURCE_DIR}/bin/euler${num}" 
      "${Euler_SOURCE_DIR}/data/euler${num}.txt")
  else()
    add_test (euler${num}test "${Euler_SOURCE_DIR}/bin/euler${num}")
  endif()
  set_tests_properties (euler${num}test
    PROPERTIES PASS_REGULAR_EXPRESSION ${result})
endmacro (peuler)

include(CheckCCompilerFlag)
check_c_compiler_flag(-Wl,-s HAS_STRIP_ALL)
check_c_compiler_flag(-O3 HAS_OPTIMIZE_GCC)
check_c_compiler_flag(/O2 HAS_OPTIMIZE_CL)

if (HAS_STRIP_ALL)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-s")
endif()
if (HAS_OPTIMIZE_GCC)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
endif()
if (HAS_OPTIMIZE_CL)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /O2")
endif()

enable_testing()

include_directories("${Euler_SOURCE_DIR}/lib")
add_subdirectory (lib)
add_subdirectory (lib/mini-gmp)

peuler (01 "233168")
peuler (02 "4613732")
peuler (03 "6857" Math)
peuler (04 "906609" Common)
peuler (05 "232792560")
peuler (06 "25164150")
peuler (07 "104743" Math)
peuler (08 "40824")
peuler (09 "31875000")
peuler (10 "142913828922" Math)
peuler (11 "70600674")
peuler (12 "76576500")
peuler (13 "5537376230" miniGMP)
peuler (14 "837799")
peuler (15 "137846528820")
peuler (16 "1366" miniGMP)
peuler (17 "21124")
peuler (18 "1074" Common)
peuler (19 "171")
peuler (20 "648" miniGMP)
peuler (21 "31626")
peuler (22 "871198282")
peuler (23 "4179871")
peuler (24 "2783915460" Common)
peuler (25 "4782" miniGMP)
peuler (26 "1/983" miniGMP Math)
peuler (27 "-59231" Math)
peuler (28 "669171001")
peuler (29 "9183")
peuler (30 "443839" Common)
peuler (31 "73682")
peuler (32 "S = 45228" Common)
peuler (33 "8/800 = 1/100" Common)
peuler (34 "40730")
peuler (35 "55" Math)
peuler (36 "872187" Common)
peuler (37 "748317" Math Common)
peuler (38 "932718654" Common)
peuler (39 "840")
peuler (40 "210" Math Common)
peuler (41 "7652413" Math Common)
peuler (42 "162")
peuler (43 "16695334890" miniGMP Common)
peuler (44 "5482660")
peuler (45 " = 1533776805")
peuler (46 "5777" Math)
peuler (47 "134043" Atkin)
peuler (48 "9110846700" miniGMP)
peuler (49 "296962999629" Math Common)
peuler (50 "S = 997651" Math)
peuler (52 "142857" Math Common)
peuler (53 "4075" miniGMP)
peuler (54 "p1 wins: 376")
peuler (55 "249" miniGMP Common)
peuler (56 "972" miniGMP)
peuler (58 "26241" Math)
peuler (59 "result: 107359")
peuler (67 "7273" Common)
peuler (79 "73162890" Common)